--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,14 @@
 }
 
 .App-header {
-  background-color: #1c1e22 !important;
+  /*background-color: #1c1e22 !important;*/
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  /*color: white;*/
 }
 
 .App-link {
